Add example for importing Cab Master CSV into MaxCut

--- a/examples/examples.csproj
+++ b/examples/examples.csproj
@@ -11,6 +11,9 @@
       <None Update="kdmax.csv">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="cabmaster.csv">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
