Add example for opening a MaxCut job file via the Command Line Interface

--- a/examples/examples.csproj
+++ b/examples/examples.csproj
@@ -8,10 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Update="kdmax.csv">
+      <None Update="test_files\kdmax.csv">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="cabmaster.csv">
+      <None Update="test_files\cabmaster.csv">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="test_files\F300.mc3">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
